Fix alignment issues with p tag. Add crew commander page.

--- a/index.css
+++ b/index.css
@@ -166,7 +166,7 @@ select {
     padding-inline: 1rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
     max-width: 50ch;
 }
 
